commit all becuase I will rebuild my system

--- a/玩转数据结构/玩转数据结构.md
+++ b/玩转数据结构/玩转数据结构.md
@@ -2,7 +2,7 @@
 
 ### 动态数组
 
-1. 如下面代码：
+####　１、封装自己的动态数组：
 
 ```java
 /**
@@ -28,6 +28,7 @@ public class Array<E> {
      * @param e
      */
     public void addLast(E e) {
+        // 扩容
         if (size == data.length) {
             resize(data.length * 2);
         }
@@ -73,7 +74,7 @@ public class Array<E> {
     public E get(int index) {
         // 验证index是否合法
         if (index < 0 || index > size) {
-            throw new IllegalArgumentException("Get is failed. Require index >= 0 and index < size");
+            throw new IllegalArgumentException("Get failed. Require index >= 0 and index < size");
         }
         return data[index];
     }
@@ -96,13 +97,16 @@ public class Array<E> {
         return -1;
     }
 
+    /**
+      * 删除指定索引的元素
+      **/
     public E remove(int index) {
         // 验证index是否合法
         if (index < 0 || index > size) {
             throw new IllegalArgumentException("Remove is failed. Require index >= 0 and index < size");
         }
         E ret = data[index];
-        for (int i = index +1; i < size; i++) {
+        for (int i = index + 1; i < size; i++) {
             data[i - 1] = data[i];
         }
         size--;
@@ -166,148 +170,150 @@ public class Array<E> {
 }
 ```
 
-2. 复杂度分析:
+#### 2、复杂度分析:
 
-   **大O表示法** ：大O描述的是算法的运行时间和输入数据之间的关系 分析时 **忽略常数**
+##### 大O表示法
 
-   |                    | 复杂度 | 分析                  |
-   | ------------------ | ------ | --------------------- |
-   | T = 2*n + 2        | O(n)   |                       |
-   | T = 2000*n + 10000 | O(n)   | 渐进时间复杂度        |
-   | T = 1*n*n + 0      | O(n^2) | 描述n趋近于无穷的情况 |
+大O描述的是算法的运行时间和输入数据之间的关系 分析时 **忽略常数
 
-   **动态数组每个方法的复杂度分析**
+|                    | 复杂度 | 分析                  |
+| ------------------ | ------ | --------------------- |
+| T = 2*n + 2        | O(n)   |                       |
+| T = 2000*n + 10000 | O(n)   | 渐进时间复杂度        |
+| T = 1 * n * n + 0  | O(n^2) | 描述n趋近于无穷的情况 |
 
-   | method           | O(..)         | 分析                                             |
-   | ---------------- | ------------- | ------------------------------------------------ |
-   | addLast(e)       | O(1)          | data[size++] = e;                                |
-   | addFirst(e)      | O(n)          | 在第一个位置插入元素肯定要挪位置 所以是N的复杂度 |
-   | add(index, e)    | O(2/n) = O(n) | 平均而言要挪动二分之一的元素 所以是N的复杂度     |
-   | removeLast(e)    | O(1)          |                                                  |
-   | removeFirst(e)   | O(n)          | 和addFirst一样需要挪动N个元素                    |
-   | remove(index, e) | O(n)          |                                                  |
-   | resize()         | O(n)          | 扩容方法                                         |
-   | set(index, e)    | O(1)          |                                                  |
-   | get(index)       | O(1)          |                                                  |
-   | contains(e)      | O(n)          |                                                  |
-   | find(e)          | O(n)          |                                                  |
+##### 动态数组每个方法的复杂度分析
 
-   **均摊时间复杂度分析**
+| method           | O(..)         | 分析                                             |
+| ---------------- | ------------- | ------------------------------------------------ |
+| addLast(e)       | O(1)          | data[size++] = e;                                |
+| addFirst(e)      | O(n)          | 在第一个位置插入元素肯定要挪位置 所以是N的复杂度 |
+| add(index, e)    | O(2/n) = O(n) | 平均而言要挪动二分之一的元素 所以是N的复杂度     |
+| removeLast(e)    | O(1)          |                                                  |
+| removeFirst(e)   | O(n)          | 和addFirst一样需要挪动N个元素                    |
+| remove(index, e) | O(n)          |                                                  |
+| resize()         | O(n)          | 扩容方法                                         |
+| set(index, e)    | O(1)          |                                                  |
+| get(index)       | O(1)          |                                                  |
+| contains(e)      | O(n)          |                                                  |
+| find(e)          | O(n)          |                                                  |
 
-   ​	在增和删除的时候会有扩容的情况出现，然而resize操作是O(n)的复杂度。假设当前capacity = 8， 并且每一次添加操作都使用addLast，在添加第九个元素的时候需要resize操作，所以会有消耗8 + 1 的时间 加上之前添加8次的操作也就是17次基本的操作（addLast）, 9次addLast操作，触发resize 总共进行了17次基本操作，**平均下来，每次addLast操作，进行2次基本操作**，
+##### 均摊时间复杂度分析
 
-   ​	假设capacity = n， n+ 1次addLast， 触发resize， 总共进行2n+1次基本操作，所以平均下来，每次addLast操作， 进行了2次基本操作，这样平均下来，时间复杂度是O(1)。
+​	在增和删除的时候会有扩容的情况出现，然而resize操作是O(n)的复杂度。假设当前capacity = 8， 并且每一次添加操作都使用addLast，在添加第九个元素的时候需要resize操作，所以会有消耗8 + 1 的时间 加上之前添加8次的操作也就是17次基本的操作（addLast）, 9次addLast操作，触发resize 总共进行了17次基本操作，**平均下来，每次addLast操作，进行2次基本操作**，
 
-   **复杂度震荡**
+​	假设capacity = n， n+ 1次addLast， 触发resize， 总共进行2n+1次基本操作，所以平均下来，每次addLast操作， 进行了2次基本操作，这样平均下来，时间复杂度是O(1)。
 
-   ​	removeLast时resize过于着急，解决方式是Lazy的处理，等到删除到整个数组的容积的四分之一再进行缩容就可以了，不然少于容积的一般就缩容1/2是不明智的。
+##### 复杂度震荡
 
-   ### 栈
+​	removeLast时resize过于着急，解决方式是```Lazy```的处理，等到删除到整个数组的容积的四分之一再进行缩容就可以了，不然少于容积的一般就缩容1/2是不明智的。
 
-   ​		栈也是一种线性数据结构，后进先出，LIFO
-   ​		典型的例子是操作系统里面的ctrl + z 和 ctrl + y
+### 栈
 
-   为了方便后面测试先新建一个接口，如下：
+​	栈也是一种线性数据结构，后进先出，```LIFO```
+​	典型的例子是操作系统里面的```ctrl + z ```和```ctrl + y```
 
-   ```java
-   public interface Stack<E> {
-   
-       int getSize();
-       boolean isEmpty();
-       void push(E e);
-       E pop();
-       E peek();
-   
-   }
-   ```
+为了方便后面测试先新建一个接口，如下：
 
-   使用数组实现栈的数据结构：
+```java
+public interface Stack<E> {
 
-   ```java
-   public class ArrayStack<E> implements Stack<E> {
-   
-       Array<E> array;
-   
-       public ArrayStack(int capacity) {
-           array = new Array<>(capacity);
-       }
-   
-       public ArrayStack() {
-           array = new Array<>();
-       }
-   
-       @Override
-       public int getSize() {
-           return array.getSize();
-       }
-   
-       @Override
-       public boolean isEmpty() {
-           return array.isEmpty();
-       }
-   
-       /**
-        * 查看数组的容积
-        * @return
-        */
-       public int getCapacity() {
-           return array.getCapacity();
-       }
-   
-       /**
-        * 压栈
-        * @param e
-        */
-       @Override
-       public void push(E e) {
-           array.addLast(e);
-       }
-   
-       @Override
-       public E pop() {
-           return array.removeLast();
-       }
-   
-       @Override
-       public E peek() {
-           return array.getLast();
-       }
-   
-       @Override
-       public String toString() {
-           StringBuilder res = new StringBuilder();
-           res.append("Stack: ").append('[');
-           for (int i = 0; i < array.getSize(); i++) {
-               res.append(array.get(i));
-               if (i != array.getSize() - 1) {
-                   res.append(", ");
-               }
-           }
-           res.append("] top");
-           return res.toString();
-       }
-   }
-   ```
+    int getSize();
+    boolean isEmpty();
+    void push(E e);
+    E pop();
+    E peek();
 
-   测试类：
+}
+```
 
-   ```java
-   public class Main {
-       public static void main(String[] args) {
-           Stack<Integer> stack = new ArrayStack<>();
-           for (int i = 0; i < 4; i++) {
-               stack.push(i);
-           }
-           System.out.println(stack);
-           while (!stack.isEmpty()) {
-               Integer pop = stack.pop();
-               System.out.print(pop + " ");
-           }
-       }
-   }
-   ```
+使用数组实现栈的数据结构：
 
-   
+```java
+public class ArrayStack<E> implements Stack<E> {
+
+    Array<E> array;
+
+    public ArrayStack(int capacity) {
+        array = new Array<>(capacity);
+    }
+
+    public ArrayStack() {
+        array = new Array<>();
+    }
+
+    @Override
+    public int getSize() {
+        return array.getSize();
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return array.isEmpty();
+    }
+
+    /**
+     * 查看数组的容积
+     * @return
+     */
+    public int getCapacity() {
+        return array.getCapacity();
+    }
+
+    /**
+     * 压栈
+     * @param e
+     */
+    @Override
+    public void push(E e) {
+        array.addLast(e);
+    }
+
+    @Override
+    public E pop() {
+        return array.removeLast();
+    }
+
+    @Override
+    public E peek() {
+        return array.getLast();
+    }
+
+    @Override
+    public String toString() {
+        StringBuilder res = new StringBuilder();
+        res.append("Stack: ").append('[');
+        for (int i = 0; i < array.getSize(); i++) {
+            res.append(array.get(i));
+            if (i != array.getSize() - 1) {
+                res.append(", ");
+            }
+        }
+        res.append("] top");
+        return res.toString();
+    }
+}
+```
+
+测试类：
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Stack<Integer> stack = new ArrayStack<>();
+        for (int i = 0; i < 4; i++) {
+            stack.push(i);
+        }
+        System.out.println(stack);
+        while (!stack.isEmpty()) {
+            Integer pop = stack.pop();
+            System.out.print(pop + " ");
+        }
+    }
+}
+```
+
+
 
 测试结果：
 
@@ -318,10 +324,10 @@ Stack: [0, 1, 2, 3] top
 
 #### 栈的时间复杂度分析：
 
-| Method    | 复杂度 | 分析                                                  |
-| --------- | ------ | ----------------------------------------------------- |
-| push(E e) | O(1)   | 入栈是数组的addLast()方法，同样通过均摊复杂度分析得出 |
-| pop()     | O(1)   | 出栈是数组的removeLast()方法，同样通过均摊复杂度分析  |
+| Method    | 复杂度 | 分析                                                      |
+| --------- | ------ | --------------------------------------------------------- |
+| push(E e) | O(1)   | 入栈是数组的``addLast()``方法，同样通过均摊复杂度分析得出 |
+| pop()     | O(1)   | 出栈是数组的``removeLast()``方法，同样通过均摊复杂度分析  |
 
 #### LetCode上面的问题分析：
 
@@ -330,8 +336,12 @@ Stack: [0, 1, 2, 3] top
 ​			给定一个只包括``'('``， ``')'``，`` '{'``，```'}'``，``'['``，``']'``的字符串，判断是否有效， 括号必须以正确的顺序关闭。
 
 ```java
+/**
+ * 给定一个只包括'('， ')'， '{','}','[',']'的字符串，判断是否有效
+ * 括号必须以正确的顺序关闭
+ */
 public class Solution {
-	// 引入java.util.Stack
+
     public boolean isValid(String s) {
         Stack<Character> stack = new Stack<>();
         for (int i = 0; i < s.length(); i++) {
@@ -355,13 +365,11 @@ public class Solution {
 }
 ```
 
-
-
 ### 队列
 
-​		队列是一种先进先出（FIFO）的线性数据结构。
+队列是一种先进先出``FIFO``的线性数据结构。
 
-​		先定义一个接口：
+先定义一个接口：
 
 ```java
 public interface Queue<E> {
@@ -389,7 +397,7 @@ public interface Queue<E> {
 }
 ```
 
-使用数组实现队列：
+#### 使用数组实现队列
 
 ```java
 public class ArrayQueue<E> implements Queue<E> {
@@ -461,6 +469,8 @@ public class ArrayQueue<E> implements Queue<E> {
 **分析：**出队操作是O(n)的复杂度， 出队的时候会有挪动的操作，那么有没有一种方式是可以保证出队的时候也是O(1)的复杂度呢？于是产生了循环队列。
 
 **想法：**可以记下队首和队尾的位置，所以出队的时候不在有数组的位置挪动，只需要修改队首的位置标记，入队的时候也可以修改队尾的位置标记，这样的话，队首那边就会有很多空余的位置，入队的时候可以重新利用这些空间，如果空间满了可以进行扩容。
+
+#### 循环队列
 
 ```java
 /**
@@ -573,7 +583,7 @@ public class LoopQueue<E> implements Queue<E> {
 }
 ```
 
-利用测试类比较数组队列以及循环队列的效率：
+利用测试类比较数组队列以及循环队列的效率
 
 ```java
 public class Main {
@@ -643,9 +653,11 @@ LoopQueue: 0.0126575s
 linkListedQueue: 0.0100581s // 这是利用链表测试的时间
 ```
 
+#### 另一种循环队列的实现
+
 ### 链表
 
-​	数组、栈、队列都是依托静态数组来实现，靠resize()来解决容量的问题。而链表是真正的**动态数据结构**，同样它也是一种**线性数据结构**。同时链表是最简单的动态数据结构，更帮助我们更好的深入理解引用和**递归**。它的数据一般都存在节点中：
+数组、栈、队列都是依托静态数组来实现，靠resize()来解决容量的问题。而链表是真正的**动态数据结构**，同样它也是一种**线性数据结构**。同时链表是最简单的动态数据结构，更帮助我们更好的深入理解引用和**递归**。它的数据一般都存在节点中：
 
 ```java
 class Node {
@@ -920,6 +932,10 @@ public class LinkedListStack<E> implements Stack<E> {
 }
 ```
 
+| push(E e） | O(1) |      |
+| ---------- | ---- | ---- |
+| pop()      | O(1) |      |
+
 #### 使用链表实现队列
 
 ```java
@@ -1031,6 +1047,10 @@ public class LinkListedQueue<E> implements Queue<E> {
     }
 }
 ```
+
+| enqueue(E e) | O(1) |      |
+| ------------ | ---- | ---- |
+| dequeue()    | O(1) |      |
 
 这样入队和出队的操作都是O(1)的复杂度了。
 
