add some new content

--- a/rabbitmq/2.rabbitmq与Spring boot整合.md
+++ b/rabbitmq/2.rabbitmq与Spring boot整合.md
@@ -2,6 +2,17 @@
 
 默认情况下消息消费了之后还是会存在消息系统里面
 
+![](./img/16.png)
+
+如果消息没有被消费就会存在Ready里面
+
+| Ready   | 准备就绪状态（待消费） |
+| ------- | ---------------------- |
+| Unacked | 待确认状态             |
+| Total   | 总数                   |
+
+`rabbitMQ`提供了一个消费确认机制，防止消费端消费失败，如果消息处于待确认的状态不会被其他消费者消费，会处于一个等待的状态，如果消费者断开连接，那么这条消息会重回一个准备就绪状态。
+
 ```java
 // 消费消息    
 channel.basicConsume(ConnectionUtil.QUEUE_NAME, true, deliverCallback);
@@ -262,6 +273,8 @@ DefaultConsumer deliverCallback = new DefaultConsumer(channel) {
 
 
 ## 交换机类型代码实战
+
+
 
 1. fanout
 
