--- a/玩转数据结构/玩转数据结构.md
+++ b/玩转数据结构/玩转数据结构.md
@@ -1296,7 +1296,494 @@ public class Solution {
 
 ​	二叉树是动态数据结构，而二分搜索树是有顺序的二叉树。
 
-​	
+### 	优先队列和堆
 
-​		
+树这种形状本身可以获得很多的拓展
+
+#### 什么是优先队列？
+
+普通队列：先进先出；后进后出
+
+优先队列：**出队顺序和入队顺序无关**；和优先级相关
+
+#### 为什么要使用优先队列？
+
+操作系统要执行多个任务，操作系统要分配时间片，就需要**动态选择优先级最高的任务执行**。
+
+任务处理中心。
+
+#### 比较
+
+|              | 入队    | 出队(拿出最大元素) |
+| ------------ | ------- | ------------------ |
+| 普通线性结构 | O(1)    | O(N)               |
+| 线性线性结构 | O(N)    | O(1)               |
+| 堆           | O(logn) | O(logn)            |
+
+#### 堆
+
+##### 堆的基本结构
+
+在我们的数据机构的世界中，只要看见了`O(logn)`的时间复杂度，那一定和树离不开。排序的算法也是
+
+#### 二叉堆Binary Heap
+
+![](./img/1.png)
+
+##### 二叉堆是一颗完全二叉树
+
+![](./img/2.png)
+
+**什么是完全二叉树？**
+
+不完全是满二叉树，但是树缺失的节点在右侧，也就是从左到右来存放我们的节点，就是完全二叉树。
+
+**完全二叉树：把元素顺序排列成树的形状**
+
+##### 满二叉树？
+
+树同时有左孩子和右孩子并且不为空就说明这棵树为满二叉树	
+
+##### 二叉堆的性质
+
++ 堆中的某个节点的值总是不大于其父节点的值【最大堆，相应的可以定义为最小堆】
++ 节点的大小和节点的层次没有关系，可能第二层的某些节点反而小于第三层节点
+
+#### 二叉堆的实现
+
+由上我们可以使用数组的方式来实现**最大堆**
+
+![](./img/3.png)
+
+我们用数组的方式可以通过节点的索引来获取孩子们的节点的索引和父节点的索引
+
+````java
+parent(i) = i / 2;
+left child(i) = 2*i;
+right child(i) = 2*i + 1;
+````
+
+索引也可以从0开始，但是取父节点和左右子节点的公式会有所变化：
+
+![](./img/4.png)
+
+##### 代码实现
+
+````java
+public class MaxHeap<E extends Comparable<E>> {
+    // 我们使用之前写过的动态数组来进行构建
+    private Array<E> data;
+
+    public MaxHeap(int capactiy) {
+        data = new Array<>(capactiy);
+    }
+
+    public MaxHeap() {
+        data = new Array<>();
+    }
+    // 返回对重元素个数
+    public int size() {
+        return data.getSize();
+    }
+    // 返回一个布尔值，表示堆中是否为空
+    public boolean isEmpty() {
+        return data.isEmpty();
+    }
+    // 返回完全二叉树的数组表示中，一个索引所表示元素的父节点的索引
+    private int parent(int index) {
+        if (index == 0) {
+            throw new IllegalArgumentException("index-0 doesn't have parent.");
+        }
+        return (index - 1) / 2;
+    }
+    // 返回一个索引表示的元素的左孩子节点索引
+    private int leftChild(int index) {
+        return index*2 + 1;
+    }
+    // 返回一个索引表示的元素的右孩子节点索引
+    private int rightChild(int index) {
+        return index*2 + 2;
+    }
+}
+````
+
+##### 向堆中添加元素和Sift Up
+
+通常添加节点直接添加到数组的最末就好了，但是新添加的元素可能会破坏堆的性质，所以我们要进行上浮操作
+
+![](./img/5.png)
+
+![](./img/6.png)
+
+![](./img/7.png)
+
+通过代码实现
+
+````java
+// 向堆中添加元素
+public void add(E e) {
+    data.addLast(e);
+    // 让数组最后元素的索引元素上浮
+    siftUp(data.getSize() - 1);
+}
+// 上浮
+private void siftUp(int k) {
+    // k索引大于0并且其父亲节点元素小于它
+    while (k > 0 && data.get(parent(k)).compareTo(data.get(k)) < 0) {
+        // 交换
+        data.swap(k, parent(k));
+        k = parent(k);
+    }
+}
+````
+
+Array#swap
+
+````java
+// 交换
+public void swap(int i, int j) {
+    if (i < 0 || i >= size || j < 0 || j >= size) {
+        throw new IllegalArgumentException("不能交换，交换双方索引异常");
+    }
+    E t = data[i];
+    data[i] = data[j];
+    data[j] = t;
+}
+````
+
+##### 取出堆中最大元素Sift Down
+
+如果我们要向堆中取出元素只能取出最大的元素，即根节点的元素，那么我们需要把数组尾部数据放到根节点，为了不破坏堆的性质，我们需要下沉，即和孩子节点最大的元素比较，如果小于就交换。如下图
+
+![](./img/8.png)
+
+![](./img/9.png)
+
+![](./img/10.png)
+
+代码：
+
+````java
+// 看堆中的最大元素
+public E findMax() {
+    if (data.getSize() == 0) {
+        throw new IllegalArgumentException("heap is Empty");
+    }
+    return data.get(0);
+}
+// 取出堆中最大元素
+public E extractMax() {
+    E ret = findMax();
+    data.swap(0, data.getSize() - 1);
+    data.removeLast();
+    siftDown(0);
+    return ret;
+}
+// 下沉
+public void siftDown(int k) {
+    // 左孩子越界，说明没有孩子了
+    while (leftChild(k) < data.getSize()) {
+        // 取出左孩子索引
+        int j = leftChild(k);
+        // 右孩子索引不能大于数组长度即存在右孩子，同时满足右孩子节点的数据大于左孩子节点
+        if (j + 1 < data.getSize() && data.get(j + 1).compareTo(data.get(j)) > 0) {
+            j = rightChild(k);
+        }
+        // 此时data[j] 是孩子中最大的
+        // 如果k的值大于或等于孩子最大的，说明没有问题
+        if (data.get(k).compareTo(data.get(j)) >= 0) {
+            break;
+        }
+        data.swap(k, j);
+        // 继续下沉
+        k = j;
+    }
+}
+````
+
+测试：
+
+````java
+int n = 100000;
+MaxHeap<Integer> maxHeap = new MaxHeap<>();
+Random random = new Random();
+for (int i = 0; i < n; i++) {
+    maxHeap.add(random.nextInt(Integer.MAX_VALUE));
+}
+int[] arr = new int[n];
+for (int i = 0; i < n; i++) {
+    arr[i] = maxHeap.extractMax();
+}
+
+for (int i = 1; i < n; i++) {
+    if (arr[i - 1] < arr[i]) {
+        throw new IllegalArgumentException("Error");
+    }
+}
+System.out.println("Test maxHeap completed");
+````
+
+**`add`和`extractMax`时间复杂度都是`O(logN)`**
+
+#### 更多二分搜索树问题
+
+![](./img/11.png)
+
+#### 基于堆的优先队列
+
+`````java
+public class PriorityQueue<E extends Comparable<E>> implements Queue<E> {
+    // 使用堆来构造优先队列
+    private MaxHeap<E> maxHeap;
+
+    @Override
+    public int getSize() {
+        return maxHeap.size();
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return maxHeap.isEmpty();
+    }
+    // 入队
+    @Override
+    public void enqueue(E e) {
+        maxHeap.add(e);
+    }
+    // 出队
+    @Override
+    public E dequeue() {
+        return maxHeap.extractMax();
+    }
+    // 查看队首
+    @Override
+    public E getFront() {
+        return maxHeap.findMax();
+    }
+}
+`````
+
+####  优先队列的经典问题
+
+##### **在1000000元素中选出前100名？**
+
+在N个元素中选出前M个元素
+
+排序？ NlogN
+
+使用优先队列？NlogM
+
+使用优先队列，维护当前看到的前M个元素
+
+1. 使用最小堆[取出最小元素进行替换，如果元素大于最小元素]
+2. 还是可以使用最大堆，我们可以使用元素最小优先级越高
+
+##### 前K个高频元素
+
+给定一个非空的整数数组，返回其中出现频率前k高的元素，例如，给定数组`[1, 1, 1, 2, 2, 3]`, `k=2` 返回`[1, 2]`
+
+使用我们自定义的优先队列
+
+````java
+public class Solution2 {
+
+    private static class Freq implements Comparable<Freq> {
+        int e, freq;
+
+        @Override
+        public int compareTo(Freq o) {
+            if (this.freq > o.freq) {
+                return 1;
+            } else if (this.freq < o.freq) {
+                return -1;
+            } else {
+                return 0;
+            }
+        }
+
+        public Freq(int e, int freq) {
+            this.e = e;
+            this.freq = freq;
+        }
+    }
+
+    public List<Integer> topKFrequent(int[] nums, int k) {
+        TreeMap<Integer, Integer> treeMap = new TreeMap<>();
+        for (int i = 0; i < nums.length; i++) {
+            if (treeMap.containsKey(nums[i])) {
+                treeMap.put(nums[i], treeMap.get(nums[i]) + 1);
+            } else {
+                treeMap.put(nums[i], 0);
+            }
+        }
+        // 使用队列
+        PriorityQueue<Freq> priorityQueue = new PriorityQueue<>();
+        for (int key: treeMap.keySet()) {
+            if (priorityQueue.getSize() < k) {
+                priorityQueue.enqueue(new Freq(key, treeMap.get(key)));
+            } else if (treeMap.get(key) > priorityQueue.getFront().freq) {
+                priorityQueue.dequeue();
+                priorityQueue.enqueue(new Freq(key, treeMap.get(key)));
+            }
+            
+        }
+        List<Integer> res = new LinkedList<>();
+        for (int i = 0; i < k; i++) {
+            res.add(priorityQueue.dequeue().e);
+        }
+        System.out.println(res);
+        return res;
+    }
+
+    public static void main(String[] args) {
+        Freq freq = new Freq(1, 4);
+        Freq freq2 = new Freq(3, 2);
+        System.out.println(freq2.compareTo(freq));
+    }
+}
+````
+
+使用Java自带的优先队列
+
+````java
+public class Solution {
+
+    private class Freq/* implements Comparable<Freq> */{
+        int e, freq;
+        public Freq(int e, int freq) {
+            this.e = e;
+            this.freq = freq;
+        }
+    }
+
+    // 创建Freq类的比较器
+    private class FreqCompator implements Comparator<Freq> {
+
+        @Override
+        public int compare(Freq a, Freq b) {
+            return b.freq - a.freq;
+            /*if (a.freq < b.freq) {
+                return 1;
+            } else if (a.freq > b.freq) {
+                return -1;
+            } else {
+                return 0;
+            }*/
+        }
+    }
+
+    /**
+     * 返回数组中元素出现频次最高的k个元素list
+     * Ologn（K）的复杂度
+     * @param nums
+     * @param k
+     * @return
+     */
+    public List<Integer> topKFrequent(int[] nums, int k) {
+         TreeMap<Integer, Integer> map = new TreeMap<>();
+         for (int num: nums) {
+             if (map.containsKey(num)) {
+                map.put(num, map.get(num) + 1);
+             } else {
+                map.put(num, 0);
+             }
+         }
+         PriorityQueue<Freq> priorityQueue = new PriorityQueue<>(new FreqCompator());
+         for (int key: map.keySet()) {
+//             System.out.println(key + " " + map.get(key) + " peek: " + (!priorityQueue.isEmpty() ? priorityQueue.peek().freq : ""));
+             /*if (priorityQueue.size() < k) {
+                 priorityQueue.add(new Freq(key, map.get(key)));
+             } else if (map.get(key) > priorityQueue.peek().freq){
+                 priorityQueue.remove();
+                 priorityQueue.add(new Freq(key, map.get(key)));
+             }*/
+             /*if (!priorityQueue.isEmpty()) {
+
+             }*/
+             priorityQueue.add(new Freq(key, map.get(key)));
+         }
+        // System.out.println(priorityQueue);
+         List<Integer> res = new LinkedList<>();
+         /*while (!priorityQueue.isEmpty()) {
+             res.add(priorityQueue.remove().e);
+         }*/
+        for (int i = 0; i < k; i++) {
+            res.add(priorityQueue.remove().e);
+        }
+         return res;
+     }
+
+
+    public List<Integer> topKFrequent2(int[] nums, int k) {
+        TreeMap<Integer, Integer> map = new TreeMap<>();
+        for (int num: nums) {
+            if (map.containsKey(num)) {
+                map.put(num, map.get(num) + 1);
+            } else {
+                map.put(num, 0);
+            }
+        }
+        /*PriorityQueue<Integer> priorityQueue = new PriorityQueue<Integer>(new Comparator<Integer>() {
+            @Override
+            public int compare(Integer o1, Integer o2) {
+                return map.get(o2) - map.get(o1);
+            }
+        });*/
+        PriorityQueue<Integer> priorityQueue = new PriorityQueue<Integer>( (o1, o2) -> map.get(o2) - map.get(o1));
+        for (int key: map.keySet()) {
+//             System.out.println(key + " " + map.get(key) + " peek: " + (!priorityQueue.isEmpty() ? priorityQueue.peek().freq : ""));
+             /*if (priorityQueue.size() < k) {
+                 priorityQueue.add(new Freq(key, map.get(key)));
+             } else if (map.get(key) > priorityQueue.peek().freq){
+                 priorityQueue.remove();
+                 priorityQueue.add(new Freq(key, map.get(key)));
+             }*/
+             /*if (!priorityQueue.isEmpty()) {
+
+             }*/
+            priorityQueue.add(key);
+        }
+        // System.out.println(priorityQueue);
+        List<Integer> res = new LinkedList<>();
+         /*while (!priorityQueue.isEmpty()) {
+             res.add(priorityQueue.remove().e);
+         }*/
+        for (int i = 0; i < k; i++) {
+            res.add(priorityQueue.remove());
+        }
+        return res;
+    }
+
+}
+````
+
+### 红黑树
+
+#### 红黑树性质
+
+1. 每个节点或者是红色的，或者是黑色的
+2. 根节点是黑色的
+3. 每一个叶子节点（最后的空节点）是黑色的
+4. 如果一个节点是红色的，那么它的孩子节点都是黑色的
+5. 从任意一个节点到叶子节点，经过的黑色节点是一样的
+
+以上是《算法导论》里面的定义，那么看看《算法4》中的定义
+
+##### 红黑树与2-3树的等价性
+
+#### 2-3树
+
+1. 满足二分搜索树的基本性质
+
+2. 节点可以存放一个元素或者两个元素
+
+   ![](./img/12.png)
+
+3. 所以2-3树可能如下图
+
+   ![](./img/13.png)
+
+4. 2-3树是一颗绝对平衡的树【从根节点到任意一个叶子节点所经过的节点个数一样】
+
+#####  2-3树是如何维持绝对的平衡
 
